; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/optimizer/path/extr_joinpath.c_try_partial_hashjoin_path.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/optimizer/path/extr_joinpath.c_try_partial_hashjoin_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_23__ = type { i32 }
%struct.TYPE_24__ = type { %struct.TYPE_22__* }
%struct.TYPE_22__ = type { i32 }
%struct.TYPE_25__ = type { i32 }
%struct.TYPE_26__ = type { i32 }

@NIL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.TYPE_23__*, %struct.TYPE_24__*, %struct.TYPE_24__*, i32*, i32, %struct.TYPE_25__*, i32)* @try_partial_hashjoin_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @try_partial_hashjoin_path(i32* %0, %struct.TYPE_23__* %1, %struct.TYPE_24__* %2, %struct.TYPE_24__* %3, i32* %4, i32 %5, %struct.TYPE_25__* %6, i32 %7) #0 {
  %9 = alloca i32*, align 8
  %10 = alloca %struct.TYPE_23__*, align 8
  %11 = alloca %struct.TYPE_24__*, align 8
  %12 = alloca %struct.TYPE_24__*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca %struct.TYPE_25__*, align 8
  %16 = alloca i32, align 4
  %17 = alloca %struct.TYPE_26__, align 4
  %18 = alloca i32, align 4
  store i32* %0, i32** %9, align 8
  store %struct.TYPE_23__* %1, %struct.TYPE_23__** %10, align 8
  store %struct.TYPE_24__* %2, %struct.TYPE_24__** %11, align 8
  store %struct.TYPE_24__* %3, %struct.TYPE_24__** %12, align 8
  store i32* %4, i32** %13, align 8
  store i32 %5, i32* %14, align 4
  store %struct.TYPE_25__* %6, %struct.TYPE_25__** %15, align 8
  store i32 %7, i32* %16, align 4
  %19 = load %struct.TYPE_23__*, %struct.TYPE_23__** %10, align 8
  %20 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @bms_is_empty(i32 %21)
  %23 = call i32 @Assert(i32 %22)
  %24 = load %struct.TYPE_24__*, %struct.TYPE_24__** %12, align 8
  %25 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %24, i32 0, i32 0
  %26 = load %struct.TYPE_22__*, %struct.TYPE_22__** %25, align 8
  %27 = icmp ne %struct.TYPE_22__* %26, null
  br i1 %27, label %28, label %39

28:                                               ; preds = %8
  %29 = load %struct.TYPE_24__*, %struct.TYPE_24__** %12, align 8
  %30 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %29, i32 0, i32 0
  %31 = load %struct.TYPE_22__*, %struct.TYPE_22__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  store i32 %33, i32* %18, align 4
  %34 = load i32, i32* %18, align 4
  %35 = call i32 @bms_is_empty(i32 %34)
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %38, label %37

37:                                               ; preds = %28
  br label %71

38:                                               ; preds = %28
  br label %39

39:                                               ; preds = %38, %8
  %40 = load i32*, i32** %9, align 8
  %41 = load i32, i32* %14, align 4
  %42 = load i32*, i32** %13, align 8
  %43 = load %struct.TYPE_24__*, %struct.TYPE_24__** %11, align 8
  %44 = load %struct.TYPE_24__*, %struct.TYPE_24__** %12, align 8
  %45 = load %struct.TYPE_25__*, %struct.TYPE_25__** %15, align 8
  %46 = load i32, i32* %16, align 4
  %47 = call i32 @initial_cost_hashjoin(i32* %40, %struct.TYPE_26__* %17, i32 %41, i32* %42, %struct.TYPE_24__* %43, %struct.TYPE_24__* %44, %struct.TYPE_25__* %45, i32 %46)
  %48 = load %struct.TYPE_23__*, %struct.TYPE_23__** %10, align 8
  %49 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %17, i32 0, i32 0
  %50 = load i32, i32* %49, align 4
  %51 = load i32, i32* @NIL, align 4
  %52 = call i32 @add_partial_path_precheck(%struct.TYPE_23__* %48, i32 %50, i32 %51)
  %53 = icmp ne i32 %52, 0
  br i1 %53, label %55, label %54

54:                                               ; preds = %39
  br label %71

55:                                               ; preds = %39
  %56 = load %struct.TYPE_23__*, %struct.TYPE_23__** %10, align 8
  %57 = load i32*, i32** %9, align 8
  %58 = load %struct.TYPE_23__*, %struct.TYPE_23__** %10, align 8
  %59 = load i32, i32* %14, align 4
  %60 = load %struct.TYPE_25__*, %struct.TYPE_25__** %15, align 8
  %61 = load %struct.TYPE_24__*, %struct.TYPE_24__** %11, align 8
  %62 = load %struct.TYPE_24__*, %struct.TYPE_24__** %12, align 8
  %63 = load i32, i32* %16, align 4
  %64 = load %struct.TYPE_25__*, %struct.TYPE_25__** %15, align 8
  %65 = getelementptr inbounds %struct.TYPE_25__, %struct.TYPE_25__* %64, i32 0, i32 0
  %66 = load i32, i32* %65, align 4
  %67 = load i32*, i32** %13, align 8
  %68 = call i64 @create_hashjoin_path(i32* %57, %struct.TYPE_23__* %58, i32 %59, %struct.TYPE_26__* %17, %struct.TYPE_25__* %60, %struct.TYPE_24__* %61, %struct.TYPE_24__* %62, i32 %63, i32 %66, i32* null, i32* %67)
  %69 = inttoptr i64 %68 to %struct.TYPE_24__*
  %70 = call i32 @add_partial_path(%struct.TYPE_23__* %56, %struct.TYPE_24__* %69)
  br label %71

71:                                               ; preds = %55, %54, %37
  ret void
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @bms_is_empty(i32) #1

declare dso_local i32 @initial_cost_hashjoin(i32*, %struct.TYPE_26__*, i32, i32*, %struct.TYPE_24__*, %struct.TYPE_24__*, %struct.TYPE_25__*, i32) #1

declare dso_local i32 @add_partial_path_precheck(%struct.TYPE_23__*, i32, i32) #1

declare dso_local i32 @add_partial_path(%struct.TYPE_23__*, %struct.TYPE_24__*) #1

declare dso_local i64 @create_hashjoin_path(i32*, %struct.TYPE_23__*, i32, %struct.TYPE_26__*, %struct.TYPE_25__*, %struct.TYPE_24__*, %struct.TYPE_24__*, i32, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
